# rust-machine-learning

axum-inference-mpsc-rs/: .gitignore  Cargo.toml
axum-inference-mpsc-rs/src/: inference_engine.rs  main.rs  predict_route.rs
axum-inference-mpsc-rs/utils/: trace_model.py
axum-inference-rs/: Cargo.toml  README.md
axum-inference-rs/python/: handler.py
axum-inference-rs/src/: main.rs
onnx-rs/: Cargo.toml
onnx-rs/src/: main.rs
onnx-rs/utils/: requirements.txt
pipeline-rs/: .gitignore  Cargo.toml  README.md
pipeline-rs/benches/: text_classification.rs
pipeline-rs/python/: pipeline.py  requirements.txt
pipeline-rs/src/: base.rs  lib.rs  main.rs  modeling_utils.rs  statistical_utils.rs  tokenizer_utils.rs
pipeline-rs/src/tasks/: mod.rs  text_classification.rs
pipeline-rs/triton/: Dockerfile  README.md  client.py
pipeline-rs/triton/models/bert/: config.pbtxt
pipeline-rs/triton/models/pipeline/: config.pbtxt
pipeline-rs/triton/models/pipeline/1/: config.json  model.py  pipeline.py  tokenizer.json
torch-rs/: .gitignore  Cargo.toml  README.md
torch-rs/examples/jit-resnet/: convert_resnet.py  main.rs
torch-rs/examples/tensor-tests/: main.rs
torch-rs/src/: lib.rs
transformers-rs/: .gitignore  Cargo.toml  README.md
transformers-rs/src/: main.rs  model.rs  tokenizer.rs
transformers-rs/utils/: test_perf.py
