[package]
name = "axum-inference-mpsc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# webserver packages
axum = "0.4.3"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.2.0", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }

# inference packages
tch = "0.6.1"
tokenizers = "0.11.0"