[package]
name = "onnx-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# onnxruntime = { git = "https://github.com/haixuanTao/onnxruntime-rs", branch = "onnx1.8", package = "onnxruntime" }
onnxruntime = "0.0.14"
