[package]
name = "pipeline-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
onnxruntime = { git = "https://github.com/haixuanTao/onnxruntime-rs", branch = 'owned_environment'}
tokenizers = "0.11.0"
ndarray = "0.15"
ndarray-stats = "0.5"