[package]
name = "pipeline-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"

[[bench]]
name = "text_classification"
harness = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
onnxruntime = { git = "https://github.com/haixuanTao/onnxruntime-rs", branch = 'owned_environment'}
tokenizers = "0.11.0"
anyhow = "1.0.53"
ndarray = "0.15"
ndarray-stats = "0.5"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}